--- a/_posts/2018-04-21-python.markdown
+++ b/_posts/2018-04-21-python.markdown
@@ -5,8 +5,40 @@ comments: true
 category: upcoming
 tags: curso <+ tags +>
 ---
+#### ¿Que es este curso?
+TODO
 
-## Contenido
+#### ¿Que **no** es este curso?
+  * Este no es un curso de nivelacion o algun tipo de monitoría, si bien
+  puede  ser un complemento interesante para ampliar o reforzar los
+  contenidos vistos en alguna materia, el objetivo del curso **no** es
+  ser una extension de algún curso.
+
+  * Este curso asume que los asistentes poseen nociones fundamentales de
+  programacion, por lo cual, **no** es un curso introductorio a la
+  programacion.
+
+#### ¿Por que python?
+TODO
+
+#### ¿Donde?
+El curso se realizará en Fabricato (27-101).
+
+#### ¿Cuando?
+El curso se realizará el dia 21 de abril de 2018 de 9:00 AM a 1:00 PM.
+
+#### ¿Que necesito para el curso?
+Es necesario que cada participante del curso lleve un computador portatil,
+dado el caso de que no posea un computador personal considere el uso del
+Aula Móvil.
+
+No es estrictamente necesario tener python instalado en el computador.
+
+
+## ¿Cual será el contenido del curso?
+El curso contará con dos secciones, en las cuales se introduciran algunos
+conceptos basicos de la programacion en python, estas secciones serán las
+siguientes:
 ### Sección 1:
   * Características de Python.
   * Instalación.
@@ -25,3 +57,4 @@ tags: curso <+ tags +>
   * Manejadores de contexto.
   * Estructura de proyectos: módulos, paquetes, importación.
   * Conceptos básicos de programacion orientada a objetos.
+
