--- a/_posts/2018-04-21-python.markdown
+++ b/_posts/2018-04-21-python.markdown
@@ -5,10 +5,10 @@ comments: true
 category: upcoming
 tags: curso <+ tags +>
 ---
-#### ¿Que es este curso?
+## ¿Que es este curso?
 TODO
 
-#### ¿Que **no** es este curso?
+## ¿Que **no** es este curso?
   * Este no es un curso de nivelacion o algun tipo de monitoría, si bien
   puede  ser un complemento interesante para ampliar o reforzar los
   contenidos vistos en alguna materia, el objetivo del curso **no** es
@@ -18,16 +18,16 @@ TODO
   programacion, por lo cual, **no** es un curso introductorio a la
   programacion.
 
-#### ¿Por que python?
+## ¿Por que python?
 TODO
 
-#### ¿Donde?
+## ¿Donde?
 El curso se realizará en Fabricato (27-101).
 
-#### ¿Cuando?
+## ¿Cuando?
 El curso se realizará el dia 21 de abril de 2018 de 9:00 AM a 1:00 PM.
 
-#### ¿Que necesito para el curso?
+## ¿Que necesito para el curso?
 Es necesario que cada participante del curso lleve un computador portatil,
 dado el caso de que no posea un computador personal considere el uso del
 Aula Móvil.
